--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script src="https://shubham-moretask.github.io/web-push-with-backend/client/client.js"></script>
+  <script src="https://web-push-with-backend.onrender.com/client.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
