--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-<!--   <script src="/client.js"></script>
-       <script src="https://shubham-moretask.github.io/new-cdn/dist/client.bundle.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" -->
+<!-- <script src="/client.js"></script> -->
+  <script src="https://shubham-moretask.github.io/new-cdn/dist/client.bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 </body>
